# VEGA-HackXplore-Hackathon-2026

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  index.html  justfile  package-lock.json  package.json  parse.cjs  parse.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  vite.config.js
.claude/hooks/: pre-commit-check.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
backend/: __init__.py  main.py  models.py  route_optimizer.py  routes.py  urgency.py
docs/: ONBOARDING.md  ai-project-structure.md  architecture.md  system-architecture.md
docs/pitch/: Smart Stone Water Sensor Project.md  Smart Watering IoT Challenge Breakdown.md  Soil Moisture Sensor Guide Summary.md  deck.md  generate_deck.py
docs/research/ai-history/: VEGA-HackXplore-2.md  (+2 more)
firmware/esp32/: main.ino
src/: App.jsx  index.css  index.html  main.jsx  parse.cjs  parse.py
src/components/: AdminLayout.jsx  CitizenLayout.jsx  EnterpriseLayout.jsx
src/context/: GlobalState.jsx
src/data/: trees.json
src/pages/: AdminAlerts.jsx  AdminAnalytics.jsx  AdminCommunity.jsx  AdminFleet.jsx  AdminHardware.jsx  AdminMap.jsx  AdminOverview.jsx  AdminRoutes.jsx  Auth.jsx  CitizenLeaderboard.jsx  CitizenMap.jsx  CitizenProfile.jsx  CitizenReport.jsx  CitizenRewards.jsx  EnterpriseAlerts.jsx  EnterpriseDashboard.jsx  EnterpriseFleet.jsx  EnterpriseReport.jsx  EnterpriseRoutes.jsx  EnterpriseScanner.jsx  Gateway.jsx  HomeownerDashboard.jsx
tests/: conftest.py  test_main.py
tools/: README.md
tools/scripts/: parse.cjs  parse.py
(+1 files in other folders)
